--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'jacoco'
     id 'org.springframework.boot' version '3.2.5'
-    id 'com.diffplug.spotless' version '6.25.0'
+//    id 'com.diffplug.spotless' version '6.25.0'
 }
 
 repositories {
@@ -12,8 +12,6 @@ repositories {
 }
 
 ext {
-//    set('springBootVersion', "2.7.5")
-//    set('springCamelVersion', "3.18.3")
     set('springBootVersion', "3.2.5")
     set('springCamelVersion', "4.4.2")
 }
@@ -30,7 +28,6 @@ dependencies {
     implementation "org.apache.camel.springboot:camel-hl7-starter:$springCamelVersion"
     implementation "org.apache.camel.springboot:camel-kafka-starter:$springCamelVersion"
     implementation "org.apache.camel:camel-componentdsl:$springCamelVersion"
-//    implementation "org.apache.camel:camel-netty:$springCamelVersion"
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion") {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
