--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,12 @@
 # the name of Camel
 camel:
-  main.name: HL7 to Kafka
+  springboot.name: hl7-to-kafka
   component:
     kafka:
-      brokers: localhost:9092
-      ssl-endpoint-algorithm: PLAINTEXT
-      ssl-truststore-password:
-      ssl-keystore-password:
+      brokers: ${BOOTSTRAP_SERVERS:localhost:9092}
+      ssl-endpoint-algorithm: ${SECURITY_PROTOCOL:PLAINTEXT}
+      ssl-truststore-password: ${SSL_TRUST_STORE_PASSWORD}
+      ssl-keystore-password: ${SSL_KEY_STORE_PASSWORD}
 
 endpoint:
   kafka.topic: hl7-topic
