--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,15 +3,13 @@ camel:
   springboot.name: hl7-to-kafka
   component:
     kafka:
-      brokers: ${BOOTSTRAP_SERVERS:localhost:9092}
-      ssl-endpoint-algorithm: ${SECURITY_PROTOCOL:PLAINTEXT}
-      ssl-truststore-password: ${SSL_TRUST_STORE_PASSWORD}
-      ssl-truststore-location: /opt/hl7-to-kafka/ssl/truststore.jks
-      ssl-keystore-password: ${SSL_KEY_STORE_PASSWORD}
-      ssl-keystore-location: /opt/hl7-to-kafka/ssl/keystore.jks
+      brokers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+      ssl-endpoint-algorithm: ${KAFKA_SECURITY_PROTOCOL:PLAINTEXT}
+      ssl-truststore-password: ${KAFKA_SSL_TRUST_STORE_PASSWORD}
+      ssl-keystore-password: ${KAFKA_SSL_KEY_STORE_PASSWORD}
 
 endpoint:
-  kafka.topic: hl7-topic
+  kafka.topic: ${KAFKA_TOPIC:hl7-topic}
   hl7:
     port: 2575
     encoding: iso-8859-1
