fix: kafka security protocol application property

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ camel:
   component:
     kafka:
       brokers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
-      ssl-endpoint-algorithm: ${KAFKA_SECURITY_PROTOCOL:PLAINTEXT}
+      security-protocol: ${KAFKA_SECURITY_PROTOCOL:PLAINTEXT}
       ssl-truststore-password: ${KAFKA_SSL_TRUST_STORE_PASSWORD}
       ssl-keystore-password: ${KAFKA_SSL_KEY_STORE_PASSWORD}
       ssl-truststore-location: ${KAFKA_SSL_TRUST_STORE_LOCATION_INTERNAL:/opt/hl7-to-kafka/ssl/truststore.jks}
