add app context test and update README

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,4 @@
-# the name of Camel
 camel:
-  springboot.name: hl7-to-kafka
   component:
     kafka:
       brokers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
@@ -9,6 +7,8 @@ camel:
       ssl-keystore-password: ${KAFKA_SSL_KEY_STORE_PASSWORD}
       ssl-truststore-location: ${KAFKA_SSL_TRUST_STORE_LOCATION_INTERNAL:/opt/hl7-to-kafka/ssl/truststore.jks}
       ssl-keystore-location: ${KAFKA_SSL_KEY_STORE_LOCATION_INTERNAL:/opt/hl7-to-kafka/ssl/keystore.jks}
+  main:
+    name: hl7-to-kafka
 
 endpoint:
   kafka.topic: ${KAFKA_TOPIC:hl7-topic}
