--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,7 +11,9 @@ camel:
     name: hl7-to-kafka
 
 endpoint:
-  kafka.topic: ${KAFKA_TOPIC:hl7-topic}
+  kafka:
+    topic: ${KAFKA_TOPIC:hl7-topic}
+    key-expression:
   hl7:
     port: 2575
     encoding: iso-8859-1
